# inelastic-scatter-lib

./: .gitignore  README.md  dataoutput_data_04_02_norm.npz  pyproject.toml  requirements.txt
analysis/: 1-reciprocal-grid.py  1_reciprocal_grid.py  2_qvector_surface_fit.py  3_analyze_qi_fit_data.py  4_normalization.py  5_inelastic_time_traces.py  reciprocal_grid.py
data/: MoS2_mp-1018809_conventional_standard.cif  cen_res_data.txt  config_2020_19_07.cfg  mask.mat  output_data_04.npz  peak_position_evolution.csv  peak_positions.csv  peak_selection_large.txt  qx_fit_data.txt  qy_fit_data.txt
helpers/: fedutils.py  fitting.py  tools.py
