[tool.poetry]
name = "inelastic-scattering-lib"
version = "0.1.0"
description = ""
authors = ["PatNigel <patrick-nigel.hildebrandt@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
plotly = "^5.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
